Refactoring: Remove StringUtils and replace that java api